--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -742,24 +742,24 @@ function collapseAllNotes() {
             </div>
 
             <!-- Desktop Grid (original layout) -->
-            <div class="w-full max-w-7xl mx-auto hidden lg:grid grid-cols-4 gap-3 lg:gap-6 min-h-[500px]">
+<div class="w-full px-4 hidden lg:grid grid-cols-4 gap-3 lg:gap-6 h-[calc(100vh-8rem)]">
                 <!-- Children Section -->
-                <div class="w-full h-[500px] lg:h-[600px]">
+                <div class="w-full h-full">
                     {% include 'components/children_section.html' %}
                 </div>
 
                 <!-- Timeline Section (Events) -->
-                <div class="w-full h-[500px] lg:h-[600px]">
+                <div class="w-full h-full">
                     {% include 'components/timeline_section.html' %}
                 </div>
 
                 <!-- Tasks Section -->
-                <div class="w-full h-[500px] lg:h-[600px]">
+                <div class="w-full h-full">
                     {% include 'components/tasks_section.html' %}
                 </div>
 
                 <!-- Notes Section -->
-                <div class="w-full h-[500px] lg:h-[600px]">
+                <div class="w-full h-full">
                     {% include 'components/notes_section.html' %}
                 </div>
             </div>
