--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
     </nav>
     {% endif %}
 
-    <main class="w-full">
+    <main class="w-full flex-1">
         {% block content %}
         {% endblock %}
     </main>
