--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -118,30 +118,6 @@
     position: relative;
     z-index: 10;
 }
-
-/* Responsive dashboard heights */
-.dashboard-grid {
-    height: calc(100vh - 120px);
-}
-
-@media (max-width: 1023px) {
-    .dashboard-grid {
-        height: auto;
-        min-height: 500px;
-    }
-}
-
-@media (min-width: 1280px) {
-    .dashboard-grid {
-        height: calc(100vh - 140px);
-    }
-}
-
-@media (min-width: 1536px) {
-    .dashboard-grid {
-        height: calc(100vh - 160px);
-    }
-}
 </style>
 
 <script>
@@ -766,24 +742,24 @@ function collapseAllNotes() {
             </div>
 
             <!-- Desktop Grid (original layout) -->
-<div class="w-full px-4 hidden lg:grid grid-cols-4 gap-3 lg:gap-6" style="height: calc(100vh - 140px);">
+<div class="w-full px-4 hidden lg:grid grid-cols-4 gap-3 lg:gap-6 h-[calc(100vh-160px)]">
                 <!-- Children Section -->
-                <div class="w-full" style="height: calc(100vh - 140px);">
+                <div class="w-full h-full">
                     {% include 'components/children_section.html' %}
                 </div>
 
                 <!-- Timeline Section (Events) -->
-                <div class="w-full" style="height: calc(100vh - 140px);">
+                <div class="w-full h-full">
                     {% include 'components/timeline_section.html' %}
                 </div>
 
                 <!-- Tasks Section -->
-                <div class="w-full" style="height: calc(100vh - 140px);">
+                <div class="w-full h-full">
                     {% include 'components/tasks_section.html' %}
                 </div>
 
                 <!-- Notes Section -->
-                <div class="w-full" style="height: calc(100vh - 140px);">
+                <div class="w-full h-full">
                     {% include 'components/notes_section.html' %}
                 </div>
             </div>
